# advent_of_code_2022

./: README.md  pyproject.toml
advent_of_code_2022/: _submarine.py  day_1.py  folder_tree.py  fruits_expedition.py
src/: fruits_expedition.py
