[tool.poetry]
name = "advent-of-code-2022"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
packages = [{include = "advent_of_code_2022"}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.23.5"
pandas = "^1.5.2"
colorama = "^0.4.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
